<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:orientation="horizontal"
    android:background="@drawable/nav_bg"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_home"
            android:contentDescription="Home"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:textColor="@color/accent_green"
            android:textSize="10sp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navProfile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="Profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/text_secondary"
            android:textSize="10sp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navPanel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_panel"
            android:contentDescription="Panel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_panel"
            android:textColor="@color/text_secondary"
            android:textSize="10sp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

</LinearLayout>
